# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-2.0.4 (20 Jun 2002)

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> in the 2.0.4 ebuild itself:
  added back tbz2tool symlink which was mistakenly removed.  Also changed the
  way we compile portage.py stuff so that we remove the previously compiled
  files, just in case clock skew cause them to seem more recent than they
  really are.  Python byte-code compilation moved to pkg_postinst()

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed up the
  fetch() code so that invalid digests don't cause a traceback.

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: some of the new
  transplanted virtuals code assumed that profiledir was set, which is not 
  required.  This code has now been fixed to not make that assumption.

*portage-2.0.3 (20 Jun 2002)

  20 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed two typos
  pointed out by stroke and g2boojum.  These fix unmerge and some aspect of
  virtuals handling, which was previously causing a traceback.
  
  19 Jun 2002; Daniel Robbins <drobbins@gentoo.org> emerge: emerge -eup world
  now will ignore world entries if it isn't really installed locally; in 2.0.1,
  --emptytree would auto-enable all world entries, leading to inconsistent
  package lists between --emptytree and without.

*portage-2.0.2 (19 Jun 2002)

  19 Jun 2002; Daniel Robbins <drobbins@gentoo.org> make.conf.ppc,
  make.globals.ppc: integrated these files into our sources.
  
  19 Jun 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed a bug
  where ROOT="" would not get properly converted to ROOT="/".
  
  18 Jun 2002; Daniel Robbins <drobbins@gentoo.org> emerge: Portage 2.0+ has
  fixed "!" depend matching support, but some code in emerge was designed to
  anticipate the incorrect behavior.  This emerge code has been fixed to work